# Gravytos

./: .gitignore  DEVELOPMENT_GUIDE.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json  vercel.json
.claude/: launch.json
.github/workflows/: build-desktop.yml  ci.yml
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: ConnectWalletButton.tsx
apps/desktop/src/pages/: Bridge.tsx  Dashboard.tsx  History.tsx  Landing.tsx  Receive.tsx  Send.tsx  Settings.tsx  Swap.tsx
apps/desktop/src/providers/: DesktopWalletProvider.tsx
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
apps/web/public/: manifest.json  sw.js
apps/web/src/: App.tsx  index.css  main.tsx  main.tsx.bak  polyfills.ts
apps/web/src/components/: AddressBookPicker.tsx  ConnectWalletButton.tsx  CreateWalletModal.tsx  ErrorBoundary.tsx  ImportWalletModal.tsx  InstallBanner.tsx  LoadingScreen.tsx  MobileNav.tsx  NotificationTray.tsx  QRCode.tsx  QRScanner.tsx  ThemeToggle.tsx  TokenPicker.tsx  TransactionConfirmModal.tsx  TransactionStatusToast.tsx  UnlockWalletModal.tsx  WalletSelector.tsx
apps/web/src/hooks/: useAutoLock.ts  useBtcBalance.ts  useERC20Approval.ts  useInstallPrompt.ts  usePrices.ts  useSecureSeed.ts  useSolBalance.ts  useTokenBalances.ts  useWalletSync.ts  (+3 more)
core-rs/: Cargo.toml
core-rs/src/: lib.rs
(+12 files in other folders)
