[package]
name = "gravytos-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
